# HiddenBytes

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
algs/: audio_helpers.cpp  audio_helpers.h  audio_lsb.cpp  audio_lsb.h  graphics_helpers.cpp  graphics_helpers.h  graphics_lsb.cpp  graphics_lsb.h  utils.cpp  utils.h
gui/: about_widget.cpp  about_widget.h  interface_widget.cpp  interface_widget.h  window.cpp  window.h
